syntax = "proto3";

import "RemotingCommandType.proto";
import "RequestHeader.proto";
import "ResponseHeader.proto";

package com.github.mxsm.protocol.protobuf;

option java_package = "com.github.mxsm.protocol.protobuf";

option java_multiple_files = true;

message RemotingCommand{

    RequestHeader requestHeaders = 1;

    ResponseHeader responseHeaders = 2;

    RemotingCommandType commandType = 3;

    /**
     * when commandType is RemotingCommandType.REQUEST，code is request code ,
     * when commandType is RemotingCommandType.RESPONSE，code is response code
     */
    int32 code = 4;

    int32 payloadCrc32 = 5;

    bool oneway = 6;


    uint64 commandId = 7;

    uint64 createTimestamp = 8;


    bytes payload = 9;

    //A result message after a message is processed - typically an error message
    string resultMessage = 10;
}
